Remove deprecated sUdig plugin.